--- a/realm-app/realm_config.json
+++ b/realm-app/realm_config.json
@@ -1,7 +1,7 @@
 {
-    "app_id": "myrealmp3-faqlf",
+    "app_id": "vuespa-xfyjc",
     "config_version": 20210101,
-    "name": "myrealmP3",
+    "name": "vueSpa",
     "location": "US-VA",
     "deployment_model": "LOCAL"
 }
